@@ -1,11 +1,11 @@
-FROM openjdk:12
+FROM openjdk:14
 
 RUN mkdir /app && mkdir /app/lib
 WORKDIR /app
 
 EXPOSE 8080
 HEALTHCHECK CMD curl -k --fail https://localhost:8080 || exit 1
-CMD java \
+CMD java --enable-preview \
   -XX:MaxRAMPercentage=80 \
   -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=127.0.0.1:9999\
   -jar app.jar
